Added the ability to add ingredients and preparation instructions.

--- a/RecipeBook/MainPage.xaml
+++ b/RecipeBook/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="RecipeBook.MainPage">
 
     <StackLayout>
-        <CollectionView ItemsSource="{Binding Recipes}"
+        <CollectionView ItemsSource="{Binding RecipeCollection}"
                         SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
