--- a/RecipeBook/AddNewRecipePage.xaml
+++ b/RecipeBook/AddNewRecipePage.xaml
@@ -4,6 +4,13 @@
              x:Class="RecipeBook.AddNewRecipePage"
              Title="Add a New Recipe">
     <VerticalStackLayout>
+
+        <Grid>
+            
+            
+            
+        </Grid>
+        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -16,28 +23,110 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="50" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Label Text="Recipe Name: "
                    VerticalOptions="Center" 
                    HorizontalOptions="Center"
                    Grid.Column="1"
+                   Grid.Row="0"
                    />
             <Entry x:Name="RecipeNameEntry"
-                   Grid.Column="2" 
                    MinimumWidthRequest="200" 
+                   Grid.Column="2" 
+                   Grid.Row="0"
                    />
-            <Label Text="Ingredients: "
+            <Label Text="Ingredient: "
                    VerticalOptions="Center" 
                    HorizontalOptions="Center"
                    Grid.Column="1"
-                   Grid.Row="2" 
+                   Grid.Row="1" 
                    />
             <Entry x:Name="IngredientsEntry"
                    Grid.Column="2" 
-                   Grid.Row="2"
+                   Grid.Row="1"
                    MinimumWidthRequest="200" 
                    />
+            <Button x:Name="AddIngredientButton"
+                    Text="Add Ingredient"
+                    Grid.Column="2" 
+                    Grid.Row="2"
+                    WidthRequest="300"
+                    HorizontalOptions="Start"
+                    Clicked="AddIngredientButton_Clicked"
+                    />
+            <Label Text="Preparation Instructions: "
+                   VerticalOptions="Center" 
+                   HorizontalOptions="Center"
+                   Grid.Column="1"
+                   Grid.Row="3" 
+                   />
+            <Entry x:Name="PrepInstructionsEntry"
+                   Grid.Column="2" 
+                   Grid.Row="3"
+                   MinimumWidthRequest="200" 
+                   />
+            <Button x:Name="AddPrepInstructionsButton"
+                    Text="Add Preparation Instructions"
+                    Grid.Column="2" 
+                    Grid.Row="4"
+                    WidthRequest="300"
+                    HorizontalOptions="Start"
+                    Clicked="AddPrepInstructionsButton_Clicked"
+                    />
+
+            <Label Text="Ingredients"
+                   Grid.Column="1"
+                   Grid.Row="5"
+                   Grid.ColumnSpan="2"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"/>
+            <CollectionView ItemsSource="{Binding IngredientCollection}"
+                            Grid.Column="1"
+                            Grid.Row="6"
+                            Grid.ColumnSpan="2"
+                            MaximumWidthRequest="500">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Label Text="{Binding StringFormat='0. {0}'}"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Label Text="Preparation Instructions"
+                   Grid.Column="1"
+                   Grid.Row="7"
+                   Grid.ColumnSpan="2"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"/>
+            <CollectionView ItemsSource="{Binding PreparationInstructionsCollection}"
+                            Grid.Column="1"
+                            Grid.Row="8"
+                            Grid.ColumnSpan="2"
+                            MaximumWidthRequest="500">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Label Text="{Binding .}"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Button x:Name="AddRecipeButton"
+                    Text="Add Recipe"
+                    Grid.Column="1"
+                    Grid.Row="10"
+                    Grid.ColumnSpan="2"/>
+
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
