--- a/RecipeBook/AddNewRecipePage.xaml
+++ b/RecipeBook/AddNewRecipePage.xaml
@@ -15,7 +15,6 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -39,46 +38,52 @@
                    />
             <Entry x:Name="RecipeNameEntry"
                    MinimumWidthRequest="200" 
-                   Grid.Column="2" 
+                   Grid.Column="1" 
                    Grid.Row="0"
                    />
-            <Label Text="Ingredient: "
+
+            <StackLayout Grid.Column="1"
+                         Grid.Row="1">
+                <Label Text="Ingredient: "
                    VerticalOptions="Center" 
                    HorizontalOptions="Center"
-                   Grid.Column="1"
-                   Grid.Row="1" 
                    />
-            <Entry x:Name="IngredientsEntry"
-                   Grid.Column="2" 
-                   Grid.Row="1"
-                   MinimumWidthRequest="200" 
-                   />
-            <Button x:Name="AddIngredientButton"
-                    Text="Add Ingredient"
-                    Grid.Column="2" 
-                    Grid.Row="2"
-                    WidthRequest="300"
-                    HorizontalOptions="Start"
-                    Clicked="AddIngredientButton_Clicked"
-                    />
-            <Label Text="Preparation Instructions: "
+                <Picker x:Name="MeasurmentPicker"
+                        Title="Select a Measurment"
+                        ItemsSource="{Binding MeasurementCollection}"
+                        ItemDisplayBinding="{Binding .}"
+                        SelectedIndexChanged="MeasurmentPicker_SelectedIndexChanged"
+                        />
+
+                <Entry x:Name="IngredientsEntry"
+                 MinimumWidthRequest="200" 
+                 />
+                <Button x:Name="AddIngredientButton"
+                  Text="Add Ingredient"
+                  WidthRequest="300"
+                  HorizontalOptions="Start"
+                  Clicked="AddIngredientButton_Clicked"
+                  />
+            </StackLayout>
+
+            <Label Text="Directions: "
                    VerticalOptions="Center" 
                    HorizontalOptions="Center"
                    Grid.Column="1"
                    Grid.Row="3" 
                    />
-            <Entry x:Name="PrepInstructionsEntry"
-                   Grid.Column="2" 
+            <Entry x:Name="DirectionsEntry"
+                   Grid.Column="1" 
                    Grid.Row="3"
                    MinimumWidthRequest="200" 
                    />
-            <Button x:Name="AddPrepInstructionsButton"
-                    Text="Add Preparation Instructions"
-                    Grid.Column="2" 
+            <Button x:Name="AddDirectionsButton"
+                    Text="Add Directions"
+                    Grid.Column="1" 
                     Grid.Row="4"
                     WidthRequest="300"
                     HorizontalOptions="Start"
-                    Clicked="AddPrepInstructionsButton_Clicked"
+                    Clicked="AddDirectionsButton_Clicked"
                     />
 
             <Label Text="Ingredients"
@@ -95,19 +100,19 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
-                            <Label Text="{Binding StringFormat='0. {0}'}"/>
+                            <Label Text="{Binding StringFormat='* {0}'}"/>
                         </StackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-            <Label Text="Preparation Instructions"
+            <Label Text="Directions"
                    Grid.Column="1"
                    Grid.Row="7"
                    Grid.ColumnSpan="2"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"/>
-            <CollectionView ItemsSource="{Binding PreparationInstructionsCollection}"
+            <CollectionView ItemsSource="{Binding DirectionsCollection}"
                             Grid.Column="1"
                             Grid.Row="8"
                             Grid.ColumnSpan="2"
