--- a/RecipeBook/MainPage.xaml
+++ b/RecipeBook/MainPage.xaml
@@ -1,15 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RecipeBook.MainPage">
+             x:Class="RecipeBook.MainPage"
+             Title="Select a Recipe"
+             >
 
     <StackLayout>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+        </Grid>
         <CollectionView ItemsSource="{Binding RecipeCollection}"
-                        SelectionMode="None">
+                        SelectionMode="Single"
+                        MaximumWidthRequest="300"
+                        MinimumWidthRequest="300"
+                        Grid.Column="1"
+                        BackgroundColor="LightGray"
+                        >
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout>
-                        <Label Text="{Binding RecipeName}" />
+                        <Label Text="{Binding RecipeName}" 
+                               />
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
