--- a/RecipeBook/MainPage.xaml
+++ b/RecipeBook/MainPage.xaml
@@ -24,8 +24,7 @@
         </Grid>
         <CollectionView ItemsSource="{Binding RecipeCollection}"
                         SelectionMode="Single"
-                        MaximumWidthRequest="300"
-                        MinimumWidthRequest="300"
+                        WidthRequest="300"
                         Grid.Column="1"
                         BackgroundColor="LightGray"
                         >
@@ -41,6 +40,7 @@
 
         <Button x:Name="AddNewRecipeButton"
                 Text="Add a new Recipe"
+                MaximumWidthRequest="300"
                 Clicked="AddNewRecipeButton_Clicked"
                 IsEnabled="True"
                 />
