--- a/RecipeBook/AddNewRecipePage.xaml
+++ b/RecipeBook/AddNewRecipePage.xaml
@@ -7,192 +7,166 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="10*" />
+                <ColumnDefinition Width="80*" />
+                <ColumnDefinition Width="10*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            
-            <StackLayout Grid.Column="1" 
+
+            <StackLayout Grid.Column="1"
                          Grid.Row="1"
-                         Margin="25"
-                         >
-                <Label Text="Recipe Name: "
-                   VerticalOptions="Center" 
-                   />
-                <Entry x:Name="RecipeNameEntry"
+                         Spacing="10">
+                <StackLayout MaximumWidthRequest="500">
+                    <Label Text="Recipe Name: "
+                       HorizontalTextAlignment="Start"/>
+
+                    <Entry x:Name="RecipeNameEntry"
                        IsSpellCheckEnabled="True"
                        IsTextPredictionEnabled="True"
                        Placeholder="Recipe Name"
                        PlaceholderColor="Gray"
-                       WidthRequest="300"
+                       
                        />
-            </StackLayout>
-            <StackLayout Grid.Column="1"
-                         Grid.Row="2"
-                         Margin="25"
-                         >
-                <Label Text="Ingredient: "
-                   VerticalOptions="Center" 
-                   />
-                <HorizontalStackLayout
-                    MaximumWidthRequest="300">
-                    <Picker x:Name="AmountPicker"
-                            Title="Amount"
-                            SelectedItem="{Binding selectedAmount}"
-                            WidthRequest="50">
-                        <Picker.ItemsSource>
-                            <x:Array Type="{x:Type x:String}">
-                                <x:String>1/8</x:String>
-                                <x:String>1/4</x:String>
-                                <x:String>1/3</x:String>
-                                <x:String>1/2</x:String>
-                                <x:String>2/3</x:String>
-                                <x:String>3/4</x:String>
-                                <x:String>1</x:String>
-                                <x:String>2</x:String>
-                                <x:String>3</x:String>
-                                <x:String>4</x:String>
-                                <x:String>5</x:String>
-                                <x:String>6</x:String>
-                                <x:String>7</x:String>
-                                <x:String>8</x:String>
-                                <x:String>9</x:String>
-                                <x:String>10</x:String>
-                                <x:String>11</x:String>
-                                <x:String>12</x:String>
-                                <x:String>13</x:String>
-                                <x:String>14</x:String>
-                                <x:String>15</x:String>
-                            </x:Array>
-                        </Picker.ItemsSource>
-                    </Picker>
-                    <Picker x:Name="MeasurmentPicker"
-                            Title="Measurment"
-                            SelectedItem="{Binding selectedMeasurement}"
-                            WidthRequest="62.5">
-                        <Picker.ItemsSource>
-                            <x:Array Type="{x:Type x:String}">
-                                <x:String>Cup(s)</x:String>
-                                <x:String>Tbsp(s)</x:String>
-                                <x:String>Tsp(s)</x:String>
-                                <x:String>ounce(s)</x:String>
-                                <x:String>gram(s)</x:String>
-                            </x:Array>
-                        </Picker.ItemsSource>
-                    </Picker>
+                </StackLayout>
+                <StackLayout MaximumWidthRequest="500">
+                    <Label Text="Ingredient: "/>
+                    <StackLayout Orientation="Horizontal">
+                        <Picker x:Name="AmountPicker"
+                                Title="Amount"
+                                SelectedItem="{Binding selectedAmount}"
+                                >
+                            <Picker.ItemsSource>
+                                <x:Array Type="{x:Type x:String}">
+                                    <x:String>1/8</x:String>
+                                    <x:String>1/4</x:String>
+                                    <x:String>1/3</x:String>
+                                    <x:String>1/2</x:String>
+                                    <x:String>2/3</x:String>
+                                    <x:String>3/4</x:String>
+                                    <x:String>1</x:String>
+                                    <x:String>2</x:String>
+                                    <x:String>3</x:String>
+                                    <x:String>4</x:String>
+                                    <x:String>5</x:String>
+                                    <x:String>6</x:String>
+                                    <x:String>7</x:String>
+                                    <x:String>8</x:String>
+                                    <x:String>9</x:String>
+                                    <x:String>10</x:String>
+                                    <x:String>11</x:String>
+                                    <x:String>12</x:String>
+                                    <x:String>13</x:String>
+                                    <x:String>14</x:String>
+                                    <x:String>15</x:String>
+                                </x:Array>
+                            </Picker.ItemsSource>
+                        </Picker>
+                        <Picker x:Name="MeasurmentPicker"
+                                Title="Measurment"
+                                SelectedItem="{Binding selectedMeasurement}"
+                                >
+                            <Picker.ItemsSource>
+                                <x:Array Type="{x:Type x:String}">
+                                    <x:String>Cup(s)</x:String>
+                                    <x:String>Tbsp(s)</x:String>
+                                    <x:String>Tsp(s)</x:String>
+                                    <x:String>ounce(s)</x:String>
+                                    <x:String>gram(s)</x:String>
+                                </x:Array>
+                            </Picker.ItemsSource>
+                        </Picker>
 
-                    <Entry x:Name="IngredientsEntry"
-                       IsSpellCheckEnabled="True"
-                       IsTextPredictionEnabled="True"
-                       Placeholder="Ingredient"
-                       PlaceholderColor="Gray"
-                       WidthRequest="187.5"
-                       />
-                </HorizontalStackLayout>
+                        <Entry x:Name="IngredientsEntry"
+                               IsSpellCheckEnabled="True"
+                               IsTextPredictionEnabled="True"
+                               Placeholder="Ingredient"
+                               PlaceholderColor="Gray"
+                               HorizontalOptions="FillAndExpand"
+                               VerticalOptions="End"
+                               />
+                    </StackLayout>
 
+                </StackLayout>
                 <Button x:Name="AddIngredientButton"
-                  Text="Add Ingredient"
-                  WidthRequest="125"
-                  HorizontalOptions="Center"
-                  Clicked="AddIngredientButton_Clicked"
-                  />
-            </StackLayout>
+                            Text="Add Ingredient"
+                            HorizontalOptions="Center"
+                            Clicked="AddIngredientButton_Clicked"
+                            />
 
-            <StackLayout Grid.Column="1" 
-                         Grid.Row="3"
-                         Margin="25"
-                         >
-                <Label Text="Direction: "
-                       VerticalOptions="Center" 
-                       />
-                <Entry x:Name="DirectionsEntry"
-                       IsSpellCheckEnabled="True"
-                       IsTextPredictionEnabled="True"
-                       Placeholder="Direction"
-                       PlaceholderColor="Gray"
-                       WidthRequest="300"
-                       />
+                <StackLayout MaximumWidthRequest="500">
+                    <Label Text="Direction: "
+                           VerticalOptions="Center" 
+                           />
+                    <Entry x:Name="DirectionsEntry"
+                           IsSpellCheckEnabled="True"
+                           IsTextPredictionEnabled="True"
+                           Placeholder="Direction"
+                           PlaceholderColor="Gray"
+                           MaximumWidthRequest="500"
+                           />
+
+                </StackLayout>
                 <Button x:Name="AddDirectionsButton"
-                    Text="Add Directions"
-                    WidthRequest="125"
-                    HorizontalOptions="Center"
-                    Clicked="AddDirectionsButton_Clicked"
-                    />
-            </StackLayout>
-            <StackLayout Grid.Column="1"
-                         Grid.Row="4"
-                         Margin="25"
-                         >
-                <Label Text="Ingredients"
+                            Text="Add Directions"
+                            HorizontalOptions="Center"
+                            Clicked="AddDirectionsButton_Clicked"
+                            />
+
+                <StackLayout MaximumWidthRequest="500">
+                    <Label Text="Ingredients"
                        HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
                        />
-                <CollectionView ItemsSource="{Binding IngredientCollection}"
-                                MaximumWidthRequest="300"
+                    <CollectionView ItemsSource="{Binding IngredientCollection}"
                                 MinimumHeightRequest="50"
                                 Background="LightGray"
                                 >
 
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <HorizontalStackLayout>
-                                <Label Text="{Binding Amount, StringFormat='{0}'}"
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <HorizontalStackLayout>
+                                    <Label Text="{Binding Amount, StringFormat='{0}'}"
                                        VerticalTextAlignment="Center"
-                                       MaximumWidthRequest="300"
                                        />
-                                <Label Text="{Binding Measurement, StringFormat=' {0}'}"
+                                    <Label Text="{Binding Measurement, StringFormat=' {0}'}"
                                        VerticalTextAlignment="Center"
-                                       MaximumWidthRequest="300"
                                        />
-                                <Label Text="{Binding Ingredient, StringFormat=' {0}'}"
+                                    <Label Text="{Binding Ingredient, StringFormat=' {0}'}"
                                        VerticalTextAlignment="Center"
-                                       MaximumWidthRequest="300"
                                        />
-                            </HorizontalStackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                                </HorizontalStackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
 
-                <Label Text="Directions"
+                    <Label Text="Directions"
                        HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
                        />
-                <CollectionView ItemsSource="{Binding DirectionsCollection}"
-                                MaximumWidthRequest="300"
+                    <CollectionView ItemsSource="{Binding DirectionsCollection}"
                                 MinimumHeightRequest="50"
                                 Background="LightGray"
                                 >
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout>
-                                <Label Text="{Binding .}"/>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-            </StackLayout>
-            <StackLayout Grid.Column="1"
-                         Grid.Row="5"
-                         Margin="25"
-                         >
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout>
+                                    <Label Text="{Binding .}"/>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
                 <Button x:Name="AddRecipeButton"
                         Text="Add Recipe"
-                        WidthRequest="300"
+                        MaximumWidthRequest="300"
                         Clicked="AddRecipeButton_Clicked"
                         />
                 <Button x:Name="CancelAddRecipeButton"
                         Text="Cancel"
+                        HorizontalOptions="Center"
                         WidthRequest="125"
-                        Margin="10"
                         Clicked="CancelAddRecipeButton_Clicked"
                         />
             </StackLayout>
