--- a/RecipeBook/MainPage.xaml
+++ b/RecipeBook/MainPage.xaml
@@ -31,8 +31,7 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout>
-                        <Label Text="{Binding RecipeName}" 
-                               />
+                        <Label Text="{Binding RecipeName}"/>
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
