Adding an API to be the go between the server and the view model.

--- a/RecipeBook/AddNewRecipePage.xaml
+++ b/RecipeBook/AddNewRecipePage.xaml
@@ -120,7 +120,7 @@
                     <Label Text="Ingredients"
                        HorizontalTextAlignment="Center"
                        />
-                    <CollectionView ItemsSource="{Binding IngredientCollection}"
+                    <CollectionView ItemsSource="{Binding IngredientsCollection}"
                                 MinimumHeightRequest="50"
                                 Background="LightGray"
                                 >
